# django-rest-profiles

./: MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
tests/: test_models.py
wrapper/: settings.py  urls.py
